# babel

./: .gitignore  Cargo.toml  Papers.md  Questions.md  README.md  TODO.md
examples/: buggy1.bs  buggy2.bs  buggy3.bs  fib.bs  immediate.bs  poly.bs  simple.bs
mir/src/: lib.rs
parsing/: Cargo.toml  build.rs
parsing/src/: ast.rs  babel.lalrpop  babel.rs  lib.rs
src/: alpha_convert.rs  ast.rs  desugar.rs  elaborate.rs  error.rs  hir.rs  idtree.rs  ir.rs  lambda_lift.rs  lib.rs  link.rs  main.rs  monoir.rs  monomorphise.rs  parser.lalrpop  passes.rs  rename.rs  scoped_map.rs  simplify.rs  specialize.rs  translate.rs  types.rs  uncurry.rs  union_find.rs  xir.rs
src/codegen/: emit.rs  expr.rs  intrinsics.rs  llvm_pass.rs  mod.rs  module.rs  prelude.rs  transform.rs  translate.rs
src/ir/: mod.rs
src/mir/: Cargo.toml
src/mir/src/: lib.rs
src/prelude/: mod.rs  prelude.bs
src/typecheck/: env.rs  hm.rs  mod.rs  typecheck.rs  unify.rs
src/types/: mod.rs  subst.rs  tvar.rs  tycon.rs
src/typing/: env.rs  explicate.rs  hm.rs  mod.rs  scheme.rs  simple.rs  subst.rs  tvar.rs  type_env.rs  typecheck.rs  types.rs  unify.rs
src/utils/: graph.rs  mod.rs  tarjan_scc.rs  union_find.rs
typing/: Cargo.toml
